[package]
name = "momemtum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "momemtum"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
strip = true
lto = true

[dependencies]
winit = "0.29"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24"
rawloader = "0.37"
rayon = "1.8"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
glam = "0.25"
kamadak-exif = "0.5"
ico = "0.3"




